 <!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<PreferenceCategory app:title="@string/messages_header">-->

        <EditTextPreference
            android:defaultValue="@string/pref_default_display_name"
            android:key="user_display_name"
            android:selectAllOnFocus="true"
            app:useSimpleSummaryProvider="true"
            android:title="@string/pref_title_display_name" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_email_address"
            android:key="user_email_address"
            android:selectAllOnFocus="true"
            android:title="@string/pref_title_email_address"
            android:inputType="textEmailAddress"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/pref_default_favourite_social"
            app:entries="@array/pref_entries_favourite_social"
            app:entryValues="@array/pref_values_favourite_social"
            app:key="user_favourite_social"
            app:title="@string/pref_title_favourite_social"
            app:useSimpleSummaryProvider="true" />

    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory app:title="@string/sync_header">-->

        <!--<SwitchPreferenceCompat-->
            <!--app:key="sync"-->
            <!--app:title="@string/sync_title" />-->

        <!--<SwitchPreferenceCompat-->
            <!--app:dependency="sync"-->
            <!--app:key="attachment"-->
            <!--app:summaryOff="@string/attachment_summary_off"-->
            <!--app:summaryOn="@string/attachment_summary_on"-->
            <!--app:title="@string/attachment_title" />-->

    <!--</PreferenceCategory>-->

</androidx.preference.PreferenceScreen>
